Fix alignment with the logo finally

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html {
 header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
   display: contents;
+  grid-area: banner;
 }
 
 img {
@@ -24,16 +25,25 @@ body {
   display: grid;
   margin: 0;
   padding: 1rem;
-  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "banner banner"
     "col1" "col2";
-  gap: 1rem;
 }
 
 nav {
-  grid-area: banner;
-  grid-column: 2;
+  grid-column: 1/3;
+  grid-row: 1/-1;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 1rem 3rem 2rem 2rem;
+  grid-column: 1/3;
+  justify-content: flex-end;
 }
 
 .logo {
@@ -50,17 +60,35 @@ main {
   display: contents;
 }
 
-li {
-  display: inline;
-}
-
-a {
+li a {
+  margin: 1rem;
+  font-family: "Patua One", sans-serif;
   color: #fff;
   font-size: 2rem;
 }
 
 .pano {
+  display: flex;
   grid-area: banner;
   grid-column: 1 / -1;
   grid-row: 1 / -1;
+}
+
+h2 {
+  color: #30658d;
+  font-family: "Patua One", sans-serif;
+  margin: 1rem 0 0;
+}
+
+figure:nth-child(1) {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+p {
+  margin: .2rem 0;
+}
+
+figure {
+  margin: 0;
 }
